--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,13 @@ db/users.sqlite
 db/users.sqlite
 node_modules/*
 node_modules
+*.sqlite
+*.sqlite
+data/texture_imgs/p2s0.webp
+data/texture_imgs/p2s1.png
+static/editor/css/styles.css
+static/project_imgs/2.png
+templates/editor.html
+users.sqlite
+*.sqlite
+users.sqlite
