--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ src/forms/__pycache__/register_form.cpython-310.pyc
 __pycache__
 
 src/static/project_imgs/*
+src/static/.webassets-cache/*
 
 src/data/db/*
 src/data/texture_imgs/*
