--- a/requirements.txt
+++ b/requirements.txt
@@ -1,182 +1,10 @@
-apturl==0.5.2
-astroid==2.9.3
-attrs==22.1.0
-Babel==2.8.0
-bcrypt==3.2.0
-beautifulsoup4==4.10.0
-black==22.10.0
-blessings==1.7
-blinker==1.4
-Brlapi==0.8.3
-cachelib==0.9.0
-cachetools==4.2.2
-certifi==2020.6.20
-chardet==4.0.0
-click==8.0.3
-colorama==0.4.4
-command-not-found==0.3
-commonmark==0.9.1
-cryptography==3.4.8
-cupshelpers==1.0
-dbus-python==1.2.18
-decorator==5.1.1
-defer==1.0.6
-diffusers @ git+https://github.com/huggingface/diffusers.git@eb1abee693104dd45376dbddd614320f2a0beb24
-distro==1.7.0
-distro-info===1.1build1
-dnspython==2.1.0
-duplicity==0.8.21
-entrypoints==0.4
-evdev==1.4.0
-fasteners==0.14.1
-filelock==3.8.0
 Flask==2.2.2
-Flask-Assets==2.0
-Flask-Login==0.6.2
-Flask-Session==0.4.0
-Flask-SQLAlchemy==3.0.2
-Flask-WTF==1.0.1
-future==0.18.2
-fuzzywuzzy==0.18.0
-gitdb==4.0.10
-GitPython==3.1.29
-gpustat==0.6.0
-greenlet==1.1.3.post0
-guake==3.8.5
-html5lib==1.1
-httplib2==0.20.2
-huggingface-hub==0.11.1
-idna==3.3
-importlib-metadata==4.6.4
-isort==5.6.4
-itsdangerous==2.1.2
-jeepney==0.7.1
-Jinja2==3.0.3
-joblib==1.2.0
-jsmin==3.0.1
-jsonschema==4.17.3
-keyring==23.5.0
-language-selector==0.1
-launchpadlib==1.10.16
-lazr.restfulclient==0.14.4
-lazr.uri==1.0.6
-lazy-object-proxy==0.0.0
-Levenshtein==0.20.8
-lockfile==0.12.2
-logilab-common==1.8.2
-louis==3.20.0
-lxml==4.8.0
-macaroonbakery==1.3.1
-Mako==1.1.3
-MarkupSafe==2.1.1
-mccabe==0.6.1
-mercurial==6.1.1
-monotonic==1.6
-more-itertools==8.10.0
-mypy-extensions==0.4.3
-netifaces==0.11.0
-nltk==3.7
-numpy==1.23.5
-nvidia-cublas-cu11==11.10.3.66
-nvidia-cuda-nvrtc-cu11==11.7.99
-nvidia-cuda-runtime-cu11==11.7.99
-nvidia-cudnn-cu11==8.5.0.96
-nvidia-ml-py3==7.352.0
-oauthlib==3.2.0
-olefile==0.46
-packaging==21.3
-pandas==1.5.2
-paramiko==2.9.3
-parrot @ git+https://github.com/PrithivirajDamodaran/Parrot_Paraphraser.git@bca7526834bf83bf55e1ebf3f7c87fd9fbb713a6
-pathspec==0.10.2
-pbr==5.8.0
-pexpect==4.8.0
-Pillow==9.0.1
-platformdirs==2.5.1
-protobuf==3.12.4
-proton-client==0.7.1
-protonvpn-cli==3.13.0
-protonvpn-gui==1.11.0
-protonvpn-nm-lib==3.11.0
-psutil==5.9.1
-ptyprocess==0.7.0
-pyarrow==10.0.1
-pycairo==1.20.1
-pycups==2.0.1
-pydeck==0.8.0
-pygame==2.1.2
-Pygments==2.11.2
-PyGObject==3.42.0
-PyJWT==2.3.0
-pylint==2.12.2
-pymacaroons==0.13.0
-Pympler==1.0.1
-PyNaCl==1.5.0
-pyOpenSSL==21.0.0
-pyparsing==2.4.7
-pyRFC3339==1.1
-pyrsistent==0.19.2
-pyTelegramBotAPI==4.6.0
-python-apt==2.3.0+ubuntu2
-python-dateutil==2.8.1
-python-debian===0.1.43ubuntu1
-python-gnupg==0.4.8
-python-Levenshtein==0.20.8
-python-magic==0.4.24
-python-telegram-bot==13.13
-pythondialog==3.5.1
-pytz==2022.1
-pytz-deprecation-shim==0.1.0.post0
-pyxdg==0.27
-PyYAML==5.4.1
-rapidfuzz==2.13.3
-regex==2022.10.31
-reportlab==3.6.8
-requests==2.25.1
-requests-toolbelt==0.9.1
-rich==12.6.0
-scikit-learn==1.1.3
-scipy==1.9.3
-SecretStorage==3.3.1
-semver==2.13.0
-sentence-transformers==2.2.2
-sentencepiece==0.1.97
-setproctitle==1.2.2
-six==1.16.0
-smmap==5.0.0
-soupsieve==2.3.1
+Flask-Login==0.6.2        
+Flask-SQLAlchemy==3.0.2 
+Flask-WTF==0.14.2
+Flask-User==1.0.1.5
+Jinja2==2.11.2
+MarkupSafe==1.1.1
+Werkzeug==1.0.1
 SQLAlchemy==1.4.42
-stchess==0.0.1
-streamlit==1.15.1
-streamlit-ace==0.1.1
-systemd-python==234
-telegram==0.0.1
-threadpoolctl==3.1.0
-tokenizers==0.13.2
-toml==0.10.2
-tomli==2.0.1
-toolz==0.12.0
-torchvision==0.14.0
-tornado==6.2
-tqdm==4.64.1
-transformers==4.25.1
-typing_extensions==4.4.0
-tzdata==2022.1
-tzlocal==4.2
-ubuntu-advantage-tools==27.9
-ubuntu-drivers-common==0.0.0
-ufw==0.36.1
-unattended-upgrades==0.1
-urllib3==1.26.5
-usb-creator==0.3.7
-validators==0.20.0
-wadllib==1.3.6
-watchdog==2.1.9
-webassets==2.0
-webencodings==0.5.1
 Werkzeug==2.2.2
-wrapt==1.13.3
-WTForms==3.0.1
-xdg==5
-xkit==0.0.0
-zipp==1.0.0
