--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,12 @@
-Flask==2.2.2
-Flask-Login==0.6.2        
-Flask-SQLAlchemy==3.0.2 
-Flask-WTF==0.14.2
-Flask-User==1.0.1.5
+Flask-Assets==2.0
+Flask-Login==0.6.2
+Flask-Session==0.4.0
+Flask-SQLAlchemy==3.0.2
+Flask-WTF==1.0.1
+Jinja2==3.0.3
+MarkupSafe==2.1.1
+requests==2.25.1
+requests-toolbelt==0.9.1
 SQLAlchemy==1.4.42
 Werkzeug==2.2.2
-Flask-Assets==2.0
-Flask-Session==0.4.0
+WTForms==3.0.1
